@@ -473,6 +473,25 @@ sub create_or_update_servicegroup($self, $name, $data) {
     return 1;
 }
 
+=method update_servicegroup
+
+Takes a service group name and a hashref of service group config.
+
+Returns true on success.
+
+Throws an exception on error.
+
+=cut
+
+sub update_servicegroup($self, $name, $data) {
+    $data->{name} = $name;
+    $data->{type} = 'SG';
+    my $res = $self->put('/gms/rest/ipObjects/serviceGroup', $data);
+    $self->_error_handler($res)
+        unless $res->code == 204;
+    return 1;
+}
+
 =method delete_servicegroup
 
 Takes a service group name.
